<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpUserActivity">




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/SetUpUserActivity_imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        
        android:src="@drawable/userdefaultprofile"
        android:clickable="true"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/SetUpUserActivity_clickToAddImage_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Click_to_add_image"
        android:textColor="@color/appBlueColor"
        android:layout_below="@+id/SetUpUserActivity_imageView"
        android:textAlignment="center"
        android:clickable="true"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/SetUpUserActivity_enterYourName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textColor="#FF000000"
        android:textStyle="bold"
        android:layout_below="@+id/SetUpUserActivity_imageView"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/SetUpUserActivity_userName_eidtText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/SetUpUserActivity_enterYourName_textView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/simple_user"
        android:background="@drawable/inputs"
        android:hint="@string/displayName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/setUpUserActivity_enterYourStatus_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SetUpUserActivity_userName_eidtText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_your_about"
        android:textColor="#FF000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/SetUpUserActivity_userAbout_eidtText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/setUpUserActivity_enterYourStatus_textView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/displayUserAbout"
        android:background="@drawable/inputs"
        android:hint="@string/About"
        android:inputType="text"
        android:text="@string/displayUserAbout"
        android:textAlignment="center"
        android:textColor="#FF000000"

        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/SetUpUserActivity_rockAndRollButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/SetUpUserActivity_userAbout_eidtText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/buttons"
        android:onClick="RockNRoll"

        android:text="@string/Next" />

    <TextView
        android:id="@+id/SetUpUserActivity_logOut_textView"
        android:layout_width="wrap_content"
        android:textColor="#F41818"
        android:layout_below="@id/SetUpUserActivity_rockAndRollButton"
        android:textAlignment="textEnd"
        android:layout_marginTop="25dp"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:layout_marginEnd="25dp"
        android:clickable="true"
        android:text="@string/LogOut"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:textColor="#F41818"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/note_set_up_user"/>

</RelativeLayout>

