<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpUserActivity">




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/GroupSettingsActivity_imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"

        android:src="@drawable/userdefaultprofile"
        android:clickable="true"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/GroupSettingsActivity_clickToAddImage_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_update_pp"
        android:textColor="@color/appBlueColor"
        android:textAlignment="center"
        android:clickable="true"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/GroupSettingsActivity_enterYourName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_username"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textColor="#FF000000"
        android:textStyle="bold"
        android:layout_below="@+id/GroupSettingsActivity_imageView"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/GroupSettingsActivity_userName_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/GroupSettingsActivity_enterYourName_textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:drawableEnd="@drawable/editar"
        android:drawingCacheQuality="high"
        android:autofillHints="@string/simple_user"
        android:background="@drawable/inputs"
        android:hint="@string/displayName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/GroupSettingsActivity_enterYourStatus_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GroupSettingsActivity_userName_editText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/edit_motto"

        android:textColor="#FF000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/GroupSettingsActivity_userAbout_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/GroupSettingsActivity_enterYourStatus_textView"
        android:layout_marginStart="20dp"
        android:drawingCacheQuality="high"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/displayUserAbout"
        android:background="@drawable/inputs"
        android:hint="@string/About"
        android:drawableEnd="@drawable/editar"
        android:inputType="text"
        android:text="@string/displayUserAbout"
        android:textAlignment="center"
        android:textColor="#FF000000"

        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/GroupSettingsActivity_resetButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/GroupSettingsActivity_userAbout_editText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttons"
        android:onClick="RockNRoll"

        android:text="@string/resBtn" />
    <Button
        android:id="@+id/GroupSettingsActivity_updateButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/GroupSettingsActivity_userAbout_editText"
        android:layout_toRightOf="@id/GroupSettingsActivity_resetButton"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/buttons"
        android:onClick="RockNRoll"

        android:text="@string/upBtn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:textColor="#F41818"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/note_set_up_user"/>

</RelativeLayout>

