<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/SendChatRequestToUserActivity_relativeLayout"
    android:layout_height="match_parent"
    tools:context=".AboutInfoSection.SendChatRequestToUserActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/SendChatRequestToUserActivity_imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/userdefaultprofile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />


    <TextView
        android:id="@+id/SendChatRequestToUserActivity_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_user_name"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:textColor="#FF000000"
        android:layout_below="@+id/SendChatRequestToUserActivity_imageView"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/SendChatRequestToUserActivity_userName_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SendChatRequestToUserActivity_name_textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:background="@drawable/inputs"
        android:text="@string/displayName"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SendChatRequestToUserActivity_about_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SendChatRequestToUserActivity_userName_textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/visit_user_about"
        android:textColor="#FF000000"
        android:textSize="18sp"
         />

    <TextView
        android:id="@+id/SendChatRequestToUserActivity_userAbout_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SendChatRequestToUserActivity_about_textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/inputs"
        android:text="@string/displayUserAbout"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/SendChatRequestToUserActivity_credentialType_textView"
        android:layout_width="wrap_content"
        android:text="@string/type_credential"
        android:layout_below="@id/SendChatRequestToUserActivity_userAbout_textView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="#FF000000"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/SendChatRequestToUserActivity_displayCredentialType_textView"
        android:layout_width="match_parent"
        android:text="@string/visit_user_credential"
        android:background="@drawable/inputs"
        android:layout_below="@id/SendChatRequestToUserActivity_credentialType_textView"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="#FF000000"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/SendChatRequestToUserActivity_request_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/SendChatRequestToUserActivity_displayCredentialType_textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/buttons"
        android:text="@string/send_user_request" />

    <Button
        android:id="@+id/SendChatRequestToUserActivity_accept_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/SendChatRequestToUserActivity_request_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/buttons"
        android:visibility="invisible"
        android:text="@string/accept_user_request" />



</RelativeLayout>