<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutInfoSection.FeedbackActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/Feedback"
        android:textSize="25sp"
        android:textAlignment="center"
        android:clickable="false"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:id="@+id/FeedbackActivity_textView"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/FeedbackActivity_editText"
        android:layout_below="@+id/FeedbackActivity_textView"
        android:layout_marginTop="45dp"
        android:layout_marginStart="10dp"
        android:padding="8dp"
        android:background="@drawable/inputs"
        android:gravity="top"
        android:textSize="18sp"
        android:hint="@string/writeFeedback"
        android:textColor="#000000"
        android:layout_width="340dp"
        android:layout_height="400dp"/>
    
    <Button
        android:layout_width="125dp"
        android:id="@+id/FeedbackActivity_sendButton"
        android:layout_below="@+id/FeedbackActivity_editText"
        android:layout_marginStart="220dp"
        android:text="@string/snd"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/custom_round_button"
        android:layout_height="50dp"/>

</RelativeLayout>